[package]
name = "docking"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
description = "Molecular docking engine in Rust"
readme = "README.md"
repository = "https://github.com/silicolab/docking"
keywords = ["docking", "molecular", "cheminformatics", "scoring", "dock"]
categories = ["science"]
exclude = ["tests/golden/"]

[dependencies]

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "thin"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
